# learn_openai

class1/learn_openai/: pyproject.toml
class1/learn_openai/app/: main.py  settings.py
class2/: pyproject.toml
class2/app/: main.py  settings.py
class3/: .env_backup  pyproject.toml
class3/app/: main.py  models.py  settings.py
