[tool.poetry]
name = "learn-openai"
version = "0.1.0"
description = ""
authors = ["Hammad-Rehman <124163466+developer-hammad-rehman@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
openai = "^1.33.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
